[gd_scene load_steps=7 format=3 uid="uid://d3skfu657xkdb"]

[ext_resource type="Script" uid="uid://cjry5yha3xqvv" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="PackedScene" uid="uid://cryaiie5h3tue" path="res://guns/gun.tscn" id="3_ecwwl"]
[ext_resource type="PackedScene" uid="uid://5iiwwmln0n52" path="res://guns/big.tscn" id="4_kk3ma"]
[ext_resource type="PackedScene" uid="uid://cjr0o5q8scgdb" path="res://guns/spray.tscn" id="5_nrnbx"]
[ext_resource type="PackedScene" uid="uid://45qsu6x182cq" path="res://guns/spread.tscn" id="6_iqepy"]
[ext_resource type="PackedScene" uid="uid://cwg4u6xlfnquk" path="res://guns/circel.tscn" id="7_h1wq0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")
guns = Array[PackedScene]([ExtResource("3_ecwwl"), ExtResource("4_kk3ma"), ExtResource("5_nrnbx"), ExtResource("6_iqepy"), ExtResource("7_h1wq0")])

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "start"

[node name="controller" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 28.0
text = "controller
"

[node name="gun_name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 256.0
offset_top = 262.0
offset_right = 296.0
offset_bottom = 285.0
text = "Gun"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 295.0
offset_right = 317.0
offset_bottom = 326.0
text = "change"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="controller" to="." method="_on_controller_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
